--- a/public/css/style.css
+++ b/public/css/style.css
@@ -816,4 +816,10 @@ p {
 	.g {
 		font-size: 32px !important;
 	}
+	.color {
+    color: #9d46af!important;
+}
+ .color1{
+	 color:#ee4321!important;
+ }
 }
